--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>inno.fiscobcos.be.MainApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
