--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     active: test
   mvc:
     throw-exception-if-no-handler-found: true
+    # 请求超时时间
+    async:
+      request-timeout: 20000
   # 单个文件的最大值
   servlet:
     multipart:
