--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,18 @@
             <systemPath>${project.basedir}/libs/opslabJutil-3.0.0.jar</systemPath>
         </dependency>
 
+        <!-- okhttps工具类 -->
+        <dependency>
+            <groupId>com.ejlchina</groupId>
+            <artifactId>okhttps</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ejlchina</groupId>
+            <artifactId>okhttps-fastjson</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
         <!--rocketMQ-->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
