--- a/pom.xml
+++ b/pom.xml
@@ -111,17 +111,13 @@
             <systemPath>${project.basedir}/libs/opslabJutil-3.0.0.jar</systemPath>
         </dependency>
 
-        <!-- okhttps工具类 -->
+        <!--okhttp依赖-->
         <dependency>
-            <groupId>com.ejlchina</groupId>
-            <artifactId>okhttps</artifactId>
-            <version>3.4.1</version>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.ejlchina</groupId>
-            <artifactId>okhttps-fastjson</artifactId>
-            <version>3.4.1</version>
-        </dependency>
+
 
         <!--rocketMQ-->
         <dependency>
